cocoa browser: fix meaning of "continuous pulsing"

This state has long meant "continuously drawn as pulsed on", but still does
constant repaints as though it was actually animating to a different state.
This change causes continuous pulsing not to be marked as a dynamic state and
updates the comment to match.

BUG=650115

Review-Url: https://codereview.chromium.org/2407343002
Cr-Commit-Position: refs/heads/master@{#424740}

Former-commit-id: 381689d5e039af3fb7e97571928ab7c7905b7f7c